# mastering-tools

./: README.md  pyproject.toml  setup.sh
scripts/: analyze_clicks.py  analyze_repair.py
src/audio_tools/: check.py  cli.py  compare.py  crest.py  dynamics.py  loudness.py  normalize.py  spectrum.py  stems.py  stereo.py  utils.py
src/mastering_tools/: check.py  cli.py  compare.py  crest.py  declick.py  dynamics.py  loudness.py  spectrum.py  stereo.py  utils.py
tests/: test_declick.py
