[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-tools"
version = "0.1.0"
description = "CLI tools for music mastering workflow"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.20.0",
    "soundfile>=0.12.0",
    "audio-separator[cpu]>=0.20.0",
]

[project.scripts]
mastering = "audio_tools.cli:main"
declick = "audio_tools.declick:main"
loudness = "audio_tools.loudness:main"
mastering-compare = "audio_tools.compare:main"
normalize = "audio_tools.normalize:main"
stems = "audio_tools.stems:main"

[project.optional-dependencies]
plot = ["matplotlib>=3.5.0"]

[tool.setuptools.packages.find]
where = ["src"]
